--- a/src/Mapbender/CoreBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.de.xlf
@@ -812,7 +812,11 @@
       </trans-unit>
       <trans-unit id="db777bdf84282626ab0204dc86f1dfcd" resname="mb.core.admin.layertree.label.theme.opened">
         <source>mb.core.admin.layertree.label.theme.opened</source>
-        <target>Geöffnet</target>
+        <target>Thema geöffnet/geschlossen</target>
+      </trans-unit>
+      <trans-unit id="0a5fe4c7ced865711f3ffcfe5d0e141a" resname="mb.core.admin.layertree.label.theme.activate">
+        <source>mb.core.admin.layertree.label.theme.activate</source>
+        <target>Aktivieren von Layers hinzufügen/entfernen</target>
       </trans-unit>
     </body>
   </file>
