--- a/src/Mapbender/CoreBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.de.xlf
@@ -818,6 +818,18 @@
         <source>mb.core.admin.layertree.label.theme.activate</source>
         <target>Aktivieren von Layers hinzufügen/entfernen</target>
       </trans-unit>
+      <trans-unit id="05f6e660c816d83676722100aa7ca0fb" resname="mb.core.admin.layertree.label.hidenottoggleable">
+        <source>mb.core.admin.layertree.label.hidenottoggleable</source>
+        <target>Nicht aufklappbare Ordner ausblenden</target>
+      </trans-unit>
+      <trans-unit id="012324b93835eb976d2a88819cd609ee" resname="mb.core.admin.layertree.label.hideselect">
+        <source>mb.core.admin.layertree.label.hideselect</source>
+        <target>Visibility ausblenden</target>
+      </trans-unit>
+      <trans-unit id="d1368f78e4f1bdc29f696297a211fd1f" resname="mb.core.admin.layertree.label.hideinfo">
+        <source>mb.core.admin.layertree.label.hideinfo</source>
+        <target>Info ausblenden</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
