add vendor specific for wms

--- a/src/Mapbender/WmsBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/WmsBundle/Resources/translations/messages.de.xlf
@@ -702,6 +702,10 @@
         <source>mb.wms.dimensionsets.no_dimension</source>
         <target>Keine Dimension vorhanden.</target>
       </trans-unit>
+      <trans-unit id="0e63672cec31c3116babef6b8277de36" resname="mb.wms.wmsloader.repo.instance.vendorspecific.label">
+        <source>mb.wms.wmsloader.repo.instance.vendorspecific.label</source>
+        <target>Vendor specific</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
