--- a/src/Mapbender/CoreBundle/Resources/translations/messages.fr.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.fr.xlf
@@ -954,6 +954,10 @@
         <source>mb.core.admin.featureinfo.label.onlyvalid</source>
         <target>Only valid</target>
       </trans-unit>
+      <trans-unit id="c15a053d4e20aee70d58215582648da6" resname="mb.core.featureinfo.error.noresult">
+        <source>mb.core.featureinfo.error.noresult</source>
+        <target>no result</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
