--- a/src/Mapbender/CoreBundle/Resources/translations/messages.fr.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.fr.xlf
@@ -958,21 +958,45 @@
         <source>mb.core.admin.layertree.label.theme.opened</source>
         <target>opened</target>
       </trans-unit>
-      <trans-unit id="636a7d9646b9dd42ac8fda315e57d8f2" resname="mb.core.admin.layertree.label.hidenottoggleable">
+      <trans-unit id="05f6e660c816d83676722100aa7ca0fb" resname="mb.core.admin.layertree.label.hidenottoggleable">
         <source>mb.core.admin.layertree.label.hidenottoggleable</source>
         <target>Hide not toggleable</target>
       </trans-unit>
-      <trans-unit id="affc05e9d63b6355f5fa94327aef2372" resname="mb.core.admin.layertree.label.hideselect">
+      <trans-unit id="012324b93835eb976d2a88819cd609ee" resname="mb.core.admin.layertree.label.hideselect">
         <source>mb.core.admin.layertree.label.hideselect</source>
         <target>Hide visibility by folders</target>
       </trans-unit>
-      <trans-unit id="8177411950647ca4ef6f115a44eda789" resname="mb.core.admin.layertree.label.hideinfo">
+      <trans-unit id="d1368f78e4f1bdc29f696297a211fd1f" resname="mb.core.admin.layertree.label.hideinfo">
         <source>mb.core.admin.layertree.label.hideinfo</source>
         <target>Hide info</target>
       </trans-unit>
       <trans-unit id="0a5fe4c7ced865711f3ffcfe5d0e141a" resname="mb.core.admin.layertree.label.theme.activate">
         <source>mb.core.admin.layertree.label.theme.activate</source>
         <target>Add activate</target>
+      </trans-unit>
+      <trans-unit id="a2ed1e4126bd38fb077437ea098b4066" resname="mb.core.layertree.label.sourcevisibility_onoff">
+        <source>mb.core.layertree.label.sourcevisibility_onoff</source>
+        <target>Show sources</target>
+      </trans-unit>
+      <trans-unit id="1af98208e92a1087f8c1fd9bacb6dd7e" resname="mb.core.layertree.label.allvisibility_on">
+        <source>mb.core.layertree.label.allvisibility_on</source>
+        <target>Show all layers</target>
+      </trans-unit>
+      <trans-unit id="7b01077c663fa706694fe8aa11d99d9e" resname="mb.core.admin.layertree.label.theme.useTheme">
+        <source>mb.core.admin.layertree.label.theme.useTheme</source>
+        <target>Theme show</target>
+      </trans-unit>
+      <trans-unit id="a8729045fe5b44678a0bc6e3bd728738" resname="mb.core.admin.layertree.label.theme.sourceVisibility">
+        <source>mb.core.admin.layertree.label.theme.sourceVisibility</source>
+        <target>Theme: source visibility</target>
+      </trans-unit>
+      <trans-unit id="7232f3e59dad7f7d89467eada5c254e8" resname="mb.core.admin.layertree.label.theme.allSelected">
+        <source>mb.core.admin.layertree.label.theme.allSelected</source>
+        <target>Theme: layer visibility</target>
+      </trans-unit>
+      <trans-unit id="e7fc5ac247221c68263af27adf77755f" resname="mb.core.admin.layertree.label.theme.label">
+        <source>mb.core.admin.layertree.label.theme.label</source>
+        <target>theme name</target>
       </trans-unit>
     </body>
   </file>
