--- a/src/Mapbender/WmsBundle/Resources/translations/messages.en.xlf
+++ b/src/Mapbender/WmsBundle/Resources/translations/messages.en.xlf
@@ -716,7 +716,7 @@
       </trans-unit>
       <trans-unit id="0e63672cec31c3116babef6b8277de36" resname="mb.wms.wmsloader.repo.instance.vendorspecific.label">
         <source>mb.wms.wmsloader.repo.instance.vendorspecific.label</source>
-        <target>__mb.wms.wmsloader.repo.instance.vendorspecific.label</target>
+        <target>Vendor specific</target>
       </trans-unit>
     </body>
   </file>
