--- a/src/Mapbender/CoreBundle/Resources/translations/messages.en.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.en.xlf
@@ -922,6 +922,10 @@
         <source>mb.core.admin.layertree.label.theme.label</source>
         <target>theme name</target>
       </trans-unit>
+      <trans-unit id="0a0018ea0813e145104cea653eab6d17" resname="mb.core.printclient.label.legend">
+        <source>mb.core.printclient.label.legend</source>
+        <target>Print legend</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
