--- a/src/Mapbender/CoreBundle/Resources/translations/messages.fr.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.fr.xlf
@@ -1078,6 +1078,14 @@
         <source>mb.geosource.image_error.statuscode</source>
         <target>HTTP status code</target>
       </trans-unit>
+      <trans-unit id="0a0018ea0813e145104cea653eab6d17" resname="mb.core.printclient.label.legend">
+        <source>mb.core.printclient.label.legend</source>
+        <target>__mb.core.printclient.label.legend</target>
+      </trans-unit>
+      <trans-unit id="c093a9f43f4ac6e10fa05a048a82f32d" resname="mb.core.admin.printclient.label.legend">
+        <source>mb.core.admin.printclient.label.legend</source>
+        <target>__mb.core.admin.printclient.label.legend</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
