--- a/src/Mapbender/CoreBundle/Resources/translations/messages.ru.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.ru.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
-  <file source-language="en" datatype="plaintext" original="file.ext">
+  <file source-language="ru" datatype="plaintext" original="file.ext">
     <body>
       <trans-unit id="f741a4a709f26fdf399f7b805ff27125" resname="mb.core.featureinfo.error.nolayer">
         <source>mb.core.featureinfo.error.nolayer</source>
@@ -801,6 +801,142 @@
       <trans-unit id="44b1db86684ccd813cfea5e5d92461cb" resname="mb.core.layertree.label.dimension">
         <source>mb.core.layertree.label.dimension</source>
         <target>Измерение</target>
+      </trans-unit>
+      <trans-unit id="c15a053d4e20aee70d58215582648da6" resname="mb.core.featureinfo.error.noresult">
+        <source>mb.core.featureinfo.error.noresult</source>
+        <target>__mb.core.featureinfo.error.noresult</target>
+      </trans-unit>
+      <trans-unit id="23c457112644bfcfed3864ffe9f5082a" resname="mb.core.redlining.geometrytype.point">
+        <source>mb.core.redlining.geometrytype.point</source>
+        <target>__mb.core.redlining.geometrytype.point</target>
+      </trans-unit>
+      <trans-unit id="6a0f86ba63eae1dff8fb6744ef6c2e55" resname="mb.core.redlining.geometrytype.line">
+        <source>mb.core.redlining.geometrytype.line</source>
+        <target>__mb.core.redlining.geometrytype.line</target>
+      </trans-unit>
+      <trans-unit id="5541291a2a8778b492748eaa467845f5" resname="mb.core.redlining.geometrytype.polygon">
+        <source>mb.core.redlining.geometrytype.polygon</source>
+        <target>__mb.core.redlining.geometrytype.polygon</target>
+      </trans-unit>
+      <trans-unit id="559d2c6711affc5637400c98a98a57c2" resname="mb.core.redlining.geometrytype.rectangle">
+        <source>mb.core.redlining.geometrytype.rectangle</source>
+        <target>__mb.core.redlining.geometrytype.rectangle</target>
+      </trans-unit>
+      <trans-unit id="ec534f6f6bdbefd454d70b3fe5c7f582" resname="mb.core.redlining.geometrytype.text">
+        <source>mb.core.redlining.geometrytype.text</source>
+        <target>__mb.core.redlining.geometrytype.text</target>
+      </trans-unit>
+      <trans-unit id="86260724aded581b31d37875b4c83c1f" resname="mb.core.redlining.geometrytype.text.label">
+        <source>mb.core.redlining.geometrytype.text.label</source>
+        <target>__mb.core.redlining.geometrytype.text.label</target>
+      </trans-unit>
+      <trans-unit id="7bfdb38a998a282470bee1644ffaaa21" resname="mb.core.redlining.geometry.action.remove">
+        <source>mb.core.redlining.geometry.action.remove</source>
+        <target>__mb.core.redlining.geometry.action.remove</target>
+      </trans-unit>
+      <trans-unit id="e08dd8632af42c56f03af8eadff0839f" resname="mb.core.redlining.geometry.action.edit">
+        <source>mb.core.redlining.geometry.action.edit</source>
+        <target>__mb.core.redlining.geometry.action.edit</target>
+      </trans-unit>
+      <trans-unit id="277124be4d6c4424f6f86f92cb07fb8d" resname="mb.core.redlining.geometry.action.zoom">
+        <source>mb.core.redlining.geometry.action.zoom</source>
+        <target>__mb.core.redlining.geometry.action.zoom</target>
+      </trans-unit>
+      <trans-unit id="0a0018ea0813e145104cea653eab6d17" resname="mb.core.printclient.label.legend">
+        <source>mb.core.printclient.label.legend</source>
+        <target>__mb.core.printclient.label.legend</target>
+      </trans-unit>
+      <trans-unit id="403fb1af574e44f9fe64fd65c8622a30" resname="mb.core.redlining.dialog.btn.cancel">
+        <source>mb.core.redlining.dialog.btn.cancel</source>
+        <target>__mb.core.redlining.dialog.btn.cancel</target>
+      </trans-unit>
+      <trans-unit id="a2ed1e4126bd38fb077437ea098b4066" resname="mb.core.layertree.label.sourcevisibility_onoff">
+        <source>mb.core.layertree.label.sourcevisibility_onoff</source>
+        <target>__mb.core.layertree.label.sourcevisibility_onoff</target>
+      </trans-unit>
+      <trans-unit id="1af98208e92a1087f8c1fd9bacb6dd7e" resname="mb.core.layertree.label.allvisibility_on">
+        <source>mb.core.layertree.label.allvisibility_on</source>
+        <target>__mb.core.layertree.label.allvisibility_on</target>
+      </trans-unit>
+      <trans-unit id="f22da785244a98eb26f463fe681cc872" resname="mb.geosource.image_error.datails">
+        <source>mb.geosource.image_error.datails</source>
+        <target>__mb.geosource.image_error.datails</target>
+      </trans-unit>
+      <trans-unit id="4115a32e09882121bb4a410859d5657e" resname="mb.geosource.image_error.exception">
+        <source>mb.geosource.image_error.exception</source>
+        <target>__mb.geosource.image_error.exception</target>
+      </trans-unit>
+      <trans-unit id="c02ac4b03faa03bd83e61ab066ea39f1" resname="mb.geosource.image_error.statuscode">
+        <source>mb.geosource.image_error.statuscode</source>
+        <target>__mb.geosource.image_error.statuscode</target>
+      </trans-unit>
+      <trans-unit id="c093a9f43f4ac6e10fa05a048a82f32d" resname="mb.core.admin.printclient.label.legend">
+        <source>mb.core.admin.printclient.label.legend</source>
+        <target>__mb.core.admin.printclient.label.legend</target>
+      </trans-unit>
+      <trans-unit id="e7fc5ac247221c68263af27adf77755f" resname="mb.core.admin.layertree.label.theme.label">
+        <source>mb.core.admin.layertree.label.theme.label</source>
+        <target>__mb.core.admin.layertree.label.theme.label</target>
+      </trans-unit>
+      <trans-unit id="7b01077c663fa706694fe8aa11d99d9e" resname="mb.core.admin.layertree.label.theme.useTheme">
+        <source>mb.core.admin.layertree.label.theme.useTheme</source>
+        <target>__mb.core.admin.layertree.label.theme.useTheme</target>
+      </trans-unit>
+      <trans-unit id="db777bdf84282626ab0204dc86f1dfcd" resname="mb.core.admin.layertree.label.theme.opened">
+        <source>mb.core.admin.layertree.label.theme.opened</source>
+        <target>__mb.core.admin.layertree.label.theme.opened</target>
+      </trans-unit>
+      <trans-unit id="a8729045fe5b44678a0bc6e3bd728738" resname="mb.core.admin.layertree.label.theme.sourceVisibility">
+        <source>mb.core.admin.layertree.label.theme.sourceVisibility</source>
+        <target>__mb.core.admin.layertree.label.theme.sourceVisibility</target>
+      </trans-unit>
+      <trans-unit id="7232f3e59dad7f7d89467eada5c254e8" resname="mb.core.admin.layertree.label.theme.allSelected">
+        <source>mb.core.admin.layertree.label.theme.allSelected</source>
+        <target>__mb.core.admin.layertree.label.theme.allSelected</target>
+      </trans-unit>
+      <trans-unit id="b99c3c9b8d4f75669761bcc882f6b06a" resname="mb.core.admin.featureinfo.label.showoriginal">
+        <source>mb.core.admin.featureinfo.label.showoriginal</source>
+        <target>__mb.core.admin.featureinfo.label.showoriginal</target>
+      </trans-unit>
+      <trans-unit id="87bb95e7b202bb8aa890dac11956fa67" resname="mb.core.admin.featureinfo.label.onlyvalid">
+        <source>mb.core.admin.featureinfo.label.onlyvalid</source>
+        <target>__mb.core.admin.featureinfo.label.onlyvalid</target>
+      </trans-unit>
+      <trans-unit id="05f6e660c816d83676722100aa7ca0fb" resname="mb.core.admin.layertree.label.hidenottoggleable">
+        <source>mb.core.admin.layertree.label.hidenottoggleable</source>
+        <target>__mb.core.admin.layertree.label.hidenottoggleable</target>
+      </trans-unit>
+      <trans-unit id="012324b93835eb976d2a88819cd609ee" resname="mb.core.admin.layertree.label.hideselect">
+        <source>mb.core.admin.layertree.label.hideselect</source>
+        <target>__mb.core.admin.layertree.label.hideselect</target>
+      </trans-unit>
+      <trans-unit id="d1368f78e4f1bdc29f696297a211fd1f" resname="mb.core.admin.layertree.label.hideinfo">
+        <source>mb.core.admin.layertree.label.hideinfo</source>
+        <target>__mb.core.admin.layertree.label.hideinfo</target>
+      </trans-unit>
+      <trans-unit id="3973ffff84e82a5b904cca85555b9c21" resname="mb.core.admin.layertree.label.usetheme">
+        <source>mb.core.admin.layertree.label.usetheme</source>
+        <target>__mb.core.admin.layertree.label.usetheme</target>
+      </trans-unit>
+      <trans-unit id="2c6f6a4b1fb50d114014cf535b03bda1" resname="mb.core.admin.layertree.label.themes">
+        <source>mb.core.admin.layertree.label.themes</source>
+        <target>__mb.core.admin.layertree.label.themes</target>
+      </trans-unit>
+      <trans-unit id="b4784e7cc4c33d0899a0a0a11a2f69ab" resname="mb.core.redlining.class.title">
+        <source>mb.core.redlining.class.title</source>
+        <target>__mb.core.redlining.class.title</target>
+      </trans-unit>
+      <trans-unit id="d960dbce5b253406c2ed289fdcafd273" resname="mb.core.redlining.class.description">
+        <source>mb.core.redlining.class.description</source>
+        <target>__mb.core.redlining.class.description</target>
+      </trans-unit>
+      <trans-unit id="15b5f2d8a1892f2f133b5da92896f230" resname="mb.core.redlining.tag.redlining">
+        <source>mb.core.redlining.tag.redlining</source>
+        <target>__mb.core.redlining.tag.redlining</target>
+      </trans-unit>
+      <trans-unit id="0561206ab04fdb6a5d43b828edafadd2" resname="mb.core.redlining.tag.geometry">
+        <source>mb.core.redlining.tag.geometry</source>
+        <target>__mb.core.redlining.tag.geometry</target>
       </trans-unit>
     </body>
   </file>
