--- a/src/Mapbender/DigitizerBundle/Resources/translations/messages.ru.xlf
+++ b/src/Mapbender/DigitizerBundle/Resources/translations/messages.ru.xlf
@@ -22,6 +22,30 @@
         <source>mb.digitizer.feature.save</source>
         <target>Сохранить</target>
       </trans-unit>
+      <trans-unit id="24f5b33cb2256ed9e028d6c243ade31e" resname="mb.digitizer.api.query.error-message">
+        <source>mb.digitizer.api.query.error-message</source>
+        <target>Ошибка коммуникации с сервером геометрий.</target>
+      </trans-unit>
+      <trans-unit id="8bd9548fc5ec084a68d7a66315dced3c" resname="mb.digitizer.feature.save.successfully">
+        <source>mb.digitizer.feature.save.successfully</source>
+        <target>Геометрия сохранена.</target>
+      </trans-unit>
+      <trans-unit id="fe8ef11d35fa59dcaf85cb9cd598feaf" resname="mb.digitizer.feature.remove.successfully">
+        <source>mb.digitizer.feature.remove.successfully</source>
+        <target>Геометрия удалена</target>
+      </trans-unit>
+      <trans-unit id="df33a5d6f6cb7e4afb0133191c521f70" resname="mb.digitizer.table.fields.not.defined">
+        <source>mb.digitizer.table.fields.not.defined</source>
+        <target>Поля таблиц геометрий не настроены.</target>
+      </trans-unit>
+      <trans-unit id="1ab5ce231e0a3ab7f272c605827a8c0f" resname="mb.digitizer.features.loading.error">
+        <source>mb.digitizer.features.loading.error</source>
+        <target>Ошибка при загрузке геометрий.</target>
+      </trans-unit>
+      <trans-unit id="c3c97b778347f54067b9b8e07d22f16a" resname="mb.digitizer.feature.remove.from.database">
+        <source>mb.digitizer.feature.remove.from.database</source>
+        <target>Удалить геометрию с сервера</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
