added more portuguese translations

--- a/src/Mapbender/CoreBundle/Resources/translations/messages.pt.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.pt.xlf
@@ -904,19 +904,19 @@
       </trans-unit>
       <trans-unit id="f22da785244a98eb26f463fe681cc872" resname="mb.geosource.image_error.datails">
         <source>mb.geosource.image_error.datails</source>
-        <target>__mb.geosource.image_error.datails</target>
+        <target>Não pode mostra o mapa.</target>
       </trans-unit>
       <trans-unit id="4115a32e09882121bb4a410859d5657e" resname="mb.geosource.image_error.exception">
         <source>mb.geosource.image_error.exception</source>
-        <target>__mb.geosource.image_error.exception</target>
+        <target>Exceção: %exception%</target>
       </trans-unit>
       <trans-unit id="c02ac4b03faa03bd83e61ab066ea39f1" resname="mb.geosource.image_error.statuscode">
         <source>mb.geosource.image_error.statuscode</source>
-        <target>__mb.geosource.image_error.statuscode</target>
+        <target>Código de status HTTP</target>
       </trans-unit>
       <trans-unit id="c093a9f43f4ac6e10fa05a048a82f32d" resname="mb.core.admin.printclient.label.legend">
         <source>mb.core.admin.printclient.label.legend</source>
-        <target>__mb.core.admin.printclient.label.legend</target>
+        <target>Imprimir legenda</target>
       </trans-unit>
     </body>
   </file>
