--- a/src/Mapbender/CoreBundle/Resources/translations/messages.nl.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.nl.xlf
@@ -946,6 +946,10 @@
         <source>mb.core.layertree.label.opacity</source>
         <target>__mb.core.layertree.label.opacity</target>
       </trans-unit>
+      <trans-unit id="76692e113f696d470e17262afa779745" resname="mb.core.layertree.contextmenu.nooption">
+        <source>mb.core.layertree.contextmenu.nooption</source>
+        <target>Layer has no context menu option</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
