--- a/src/Mapbender/CoreBundle/Resources/translations/messages.pt.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.pt.xlf
@@ -918,6 +918,10 @@
         <source>mb.core.admin.printclient.label.legend</source>
         <target>Imprimir legenda</target>
       </trans-unit>
+      <trans-unit id="76692e113f696d470e17262afa779745" resname="mb.core.layertree.contextmenu.nooption">
+        <source>mb.core.layertree.contextmenu.nooption</source>
+        <target>Layer has no context menu option</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
