--- a/src/Mapbender/CoreBundle/Resources/translations/messages.ru.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.ru.xlf
@@ -938,6 +938,10 @@
         <source>mb.core.redlining.tag.geometry</source>
         <target>__mb.core.redlining.tag.geometry</target>
       </trans-unit>
+      <trans-unit id="76692e113f696d470e17262afa779745" resname="mb.core.layertree.contextmenu.nooption">
+        <source>mb.core.layertree.contextmenu.nooption</source>
+        <target>Layer has no context menu option</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
