--- a/src/Mapbender/CoreBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.de.xlf
@@ -948,7 +948,7 @@
       </trans-unit>
       <trans-unit id="68f999a910b044ad5ccab94273fd3a47" resname="mb.core.admin.printclient.label.legend_default_behaviour">
         <source>mb.core.admin.printclient.label.legend_default_behaviour</source>
-        <target>Legenden Checkbox vorselektiert</target>
+        <target>Legenden Checkbox aktiv</target>
       </trans-unit>
     </body>
   </file>
