--- a/src/Mapbender/ManagerBundle/Resources/translations/messages.en.yml
+++ b/src/Mapbender/ManagerBundle/Resources/translations/messages.en.yml
@@ -144,6 +144,9 @@ mb:
           title: 'URL Title'
         description: Description
         template: Template
+        edit:
+          title: 'Common'
+          base_data: 'Base data'
       applications: Applications
     managerbundle:
       applications: Applications
