Migrate print client to print bundle

--- a/src/Mapbender/PrintBundle/Resources/translations/messages.es.yml
+++ b/src/Mapbender/PrintBundle/Resources/translations/messages.es.yml
@@ -1,4 +1,11 @@
 mb:
+  core:
+    admin:
+      printclient:
+        label:
+          autoopen: Autoabrir
+          rotatable: Rotable
+          legend: __mb.core.admin.printclient.label.legend
   print:
     imageexport:
       class:
@@ -16,3 +23,28 @@ mb:
       info:
         noactivelayer: 'No hay capa activa!'
       chooseformat: 'Escoger formato para exportar'
+    client:
+      label:
+        template: Plantilla
+        quality: Calidad
+        scale: Escala
+        rotation: Rotación
+        legend: __mb.core.printclient.label.legend
+      popup:
+        btn:
+          ok: Imprimir
+          cancel: Cancelar
+      info:
+        noactivelayer: 'No hay capa activa!'
+      form:
+        required: 'Por favor rellene este campo'
+      class:
+        title: 'Cliente de Impresión'
+        description: 'Renders un diálogo de Impresión'
+      tag:
+        print: imprimir
+        pdf: pdf
+        png: png
+        gif: gif
+        jpg: jpg
+        jpeg: jpeg
