--- a/src/Mapbender/PrintBundle/Resources/translations/messages.ru.yml
+++ b/src/Mapbender/PrintBundle/Resources/translations/messages.ru.yml
@@ -1,4 +1,11 @@
 mb:
+  core:
+    admin:
+      printclient:
+        label:
+          autoopen: Авто-открытие
+          rotatable: Поворачиваемые
+          legend: 'Легенда'
   print:
     imageexport:
       popup:
@@ -18,3 +25,28 @@ mb:
         export: Экспорт
         jpeg: jpeg
         png: png
+    client:
+      label:
+        template: Шаблон
+        quality: Качество
+        scale: Масштаб
+        rotation: Вращение
+        legend: 'Легенда'
+      popup:
+        btn:
+          ok: Печать
+          cancel: Отмена
+      info:
+        noactivelayer: 'Нет активного слоя!'
+      form:
+        required: 'Пожалуйста, заполните это поле'
+      class:
+        title: Печать
+        description: 'Отображает диалоговое окно печати'
+      tag:
+        print: печать
+        pdf: pdf
+        png: png
+        gif: gif
+        jpg: jpg
+        jpeg: jpeg
