--- a/src/Mapbender/PrintBundle/Resources/translations/messages.de.yml
+++ b/src/Mapbender/PrintBundle/Resources/translations/messages.de.yml
@@ -1,4 +1,12 @@
 mb:
+  core:
+    admin:
+    printclient:
+      label:
+        autoopen: 'Automatisches Öffnen'
+        rotatable: Drehbar
+        legend: 'Legende drucken'
+        legend_default_behaviour: 'Legenden Checkbox aktiv'
   print:
     imageexport:
       chooseformat: 'Exportformat auswählen'
@@ -16,3 +24,31 @@ mb:
         export: Export
         jpeg: jpeg
         png: png
+    client:
+      label:
+        template: Vorlage
+        quality: Qualität
+        scale: Maßstab
+        rotation: Drehung
+        legend: 'Legende drucken'
+      popup:
+        btn:
+          ok: Drucken
+          cancel: Abbrechen
+      info:
+        noactivelayer: 'Keine aktive Ebene!'
+      form:
+        required: 'Bitte füllen Sie dieses Feld aus'
+      class:
+        title: Druck
+        description: 'Druck Dialog'
+      tag:
+        print: Druck
+        pdf: pdf
+        png: png
+        gif: gif
+        jpg: jpg
+        jpeg: jpeg
+      btn:
+        deactivate: 'Druckrahmen deaktivieren'
+        activate: 'Druckrahmen aktivieren'
