Add print missed translation subjects for es, nl, pt and ru

--- a/src/Mapbender/PrintBundle/Resources/translations/messages.es.yml
+++ b/src/Mapbender/PrintBundle/Resources/translations/messages.es.yml
@@ -41,6 +41,9 @@ mb:
         gif: gif
         jpg: jpg
         jpeg: jpeg
+      btn:
+        deactivate: 'Deactivate Print Frame'
+        activate: 'Activate Print Frame'
       admin:
         autoopen: Autoabrir
         rotatable: Rotable
