--- a/src/Mapbender/PrintBundle/Resources/translations/messages.ru.yml
+++ b/src/Mapbender/PrintBundle/Resources/translations/messages.ru.yml
@@ -43,6 +43,9 @@ mb:
         gif: gif
         jpg: jpg
         jpeg: jpeg
+      btn:
+        deactivate: Выключить
+        activate: Включить
       admin:
         autoopen: Авто-открытие
         rotatable: Поворачиваемые
