--- a/src/Mapbender/WmsBundle/Resources/translations/messages.pt.yml
+++ b/src/Mapbender/WmsBundle/Resources/translations/messages.pt.yml
@@ -190,7 +190,7 @@ mb:
     metadata:
       section:
         common:
-          common: Common
+          _title: Common
           title: Título
           name: Nome
           version: Versão
@@ -199,11 +199,11 @@ mb:
           onlineResource: OnlineResource
           exceptionFormats: 'Formato de exceção'
         useconditions:
-          title: 'Termos de utilização'
+          _title: 'Termos de utilização'
           fees: Taxa
           accessconstraints: 'Limitações de acesso'
         contact:
-          title: Contacto
+          _title: Contacto
           person: Pessoa
           position: Posição
           organization: Organização
@@ -217,7 +217,7 @@ mb:
           addressPostCode: CEP
           addressCountry: País
         items:
-          layer: Nível
+          _title: Nível
           title: Título
           name: Nome
           srs: SRS
